# YOLOs-CPP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: common.cmake
demos/: CMakeLists.txt  class_image_inference.cpp
include/class/: YOLOCLASS.hpp
include/det/: YOLO.h  YOLO.hpp  YOLO11.h  YOLO11.hpp  YOLO12.hpp
include/obb/: YOLO-OBB.hpp
include/pose/: YOLO-POSE.hpp
include/seg/: YOLO-Seg.hpp
include/tools/: BoundedThreadSafeQueue.hpp
include/utils/: YOLO-Utils.hpp
include/yolos/core/: drawing.hpp  nms.hpp  preprocessing.hpp  session_base.hpp  types.hpp  utils.hpp  version.hpp
include/yolos/tasks/: classification.hpp  detection.hpp  obb.hpp  pose.hpp  segmentation.hpp
libs/: CMakeLists.txt
models/: export_onnx.py
scripts/: build.sh  download_onnxruntime.sh  run_benchmarks.sh  run_camera.sh  run_image.sh  run_test.sh  run_video.sh  setup_onnxruntime.sh
src/: CMakeLists.txt  YOLO-OBB.cpp  YOLO-POSE.cpp  YOLO-Seg.cpp  YOLO-Utils.cpp  YOLO.cpp  YOLO11.cpp  YOLOCLASS.cpp  camera_inference.cpp  image_inference.cpp  video_inference.cpp
src/core/: drawing.cpp  nms.cpp  preprocessing.cpp  session_base.cpp  types.cpp  utils.cpp
src/tasks/: classification.cpp  detection.cpp  obb.cpp  pose.cpp  segmentation.cpp
test/: CMakeLists.txt  build_test.sh
test/classification/: inference_classification_cpp.cpp
test/detection/: inference_detection_cpp.cpp
test/obb/: inference_obb_cpp.cpp
test/pose/: inference_pose_cpp.cpp
test/segmentation/: inference_segmentation_cpp.cpp
tests/: CMakeLists.txt  build_test.sh  test_classification.sh  test_detection.sh  test_obb.sh  test_pose.sh  test_segmentation.sh
tests/classification/: compare_results.cpp  inference_classification_cpp.cpp
tests/detection/: compare_results.cpp  inference_detection_cpp.cpp
tests/obb/: compare_obb_results.cpp  inference_obb_cpp.cpp
tests/pose/: compare_results.cpp  inference_pose_cpp.cpp
tests/segmentation/: compare_results.cpp  inference_segmentation_cpp.cpp
